# dash-ant-design-components

./: .editorconfig  .eslintignore  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  MANIFEST.in  README.md  jest.config.ts  justfile  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  webpack.config.js
.github/workflows/: release.yaml  test.yaml
dash_ant_design_components/: __init__.py  _imports_.py
dash_antd/: __init__.py  _imports_.py
dash_antd/ext/: __init__.py  _sidebar.py  _theming.py
dash_antd_components/: __init__.py  _imports_.py
dash_antdesign_components/: __init__.py
demo/: Demo.tsx  index.html  index.tsx
example/: __init__.py  __main__.py  metadata.py
example/assets/: app.css
example/pages/: 01_controls.py  02_cards.py  03_graph.py  __init__.py  controls.py  graph.py
example/plugin/: multi_page.py
src/ts/: index.ts  props.ts  types.ts  utilities.ts
src/ts/components/: ConfigProvider.tsx  Segmented.tsx  Select.tsx  Slider.tsx  Space.tsx  Switch.tsx
src/ts/components/alert/: Alert.tsx
src/ts/components/alert/__tests__/: Alert.test.tsx
src/ts/components/autocomplete/: AutoComplete.tsx
src/ts/components/button/: Button.tsx
src/ts/components/card/: Card.tsx  CardAction.tsx  CardExtra.tsx  card.less
src/ts/components/checkbox/: Checkbox.tsx  CheckboxGroup.tsx
src/ts/components/datepicker/: DatePicker.tsx  DateRangePicker.tsx  RangePicker.tsx  TimePicker.tsx  TimeRangePicker.tsx
src/ts/components/divider/: Divider.tsx
src/ts/components/dropdown/: Dropdown.tsx  DropdownButton.tsx  DropdownMenu.tsx
src/ts/components/icon/: Icon.tsx
src/ts/components/input/: Input.tsx  InputNumber.tsx  TextArea.tsx
src/ts/components/layout/: Col.tsx  Content.tsx  Footer.tsx  Header.tsx  Layout.tsx  Row.tsx  Sidebar.tsx
src/ts/components/menu/: Menu.tsx  MenuItem.tsx
src/ts/components/pageheader/: PageHeader.tsx  PageHeaderFooter.tsx  PageHeaderOperation.tsx
src/ts/components/radio/: Radio.tsx  RadioButton.tsx  RadioGroup.tsx
src/ts/components/segmented/: Segmented.tsx
src/ts/components/select/: Select.tsx
src/ts/components/slider/: Slider.tsx
src/ts/components/space/: Space.tsx
src/ts/components/steps/: Step.tsx  Steps.tsx
src/ts/components/switch/: Switch.tsx
src/ts/components/tabs/: TabPane.tsx  Tabs.tsx  TabsPane.tsx
src/ts/components/tag/: CheckableTag.tsx  Tag.tsx
src/ts/components/templates/: Page.tsx  PagesWithSidebar.tsx
src/ts/components/timeline/: Timeline.tsx  TimelineItem.tsx
styles/: app.less  theme.less
webpack/: config.demo.js  config.dist.js  moduleDefinition.js  theme.js
(+13 files in other folders)
