[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dash-antd"
version = "0.0.5"
description = "Ant Design components for Plotly Dash"
authors = ["Robert Pack <robstar.pack@gmail.com>"]
license = "MIT"
include = [
    "dash_antd/*.py",
    "dash_antd/metadata.json",
    "dash_antd/package-info.json",
    "dash_antd/dash_antd.min.js",
    "dash_antd/dash_antd.min.js.LICENSE.txt",
]

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.4"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
bandit = "^1.7.4"
flake8 = "^4.0.1"
isort = "^5.10.1"
wheel = "^0.37.1"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
