[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dash-antd"
version = "0.1.6"
description = "Ant Design components for Plotly Dash"
repository = "https://github.com/roeap/dash-ant-design-components"
authors = ["Robert Pack <robstar.pack@gmail.com>"]
license = "MIT"
readme = "README.md"
include = [
    "dash_antd/*.py",
    "dash_antd/metadata.json",
    "dash_antd/package-info.json",
    "dash_antd/package.json",
    "dash_antd/dash_antd.min.js",
    "dash_antd/LICENSE.txt",
]

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.7"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
ruff = "^0.0.150"
wheel = "^0.37.1"
PyYAML = "^6.0"
pre-commit = "^2.20.0"
detect-secrets = "^1.4.0"
pandas = "^1.5.2"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'

[tool.ruff]
line-length = 120
select = [
    "B", # flake8-bugbear
    "C", # flake8-comprehensions
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "S", # flake8-bandit
    "W", # pycodestyle warnings
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "dash_antd/__init__.py",
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py39"

[tool.ruff.isort]
known-first-party = ["argus"]

[tool.ruff.per-file-ignores]
"test_*" = [
    "S101", # assert staments allowed in tests
    "B008", # do not perform function calls in argument defaults
]
"dash_antd/*" = [
    "E501", # line too long
    "W605",
]
